--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @Serchservice:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${PKG_AUTH_TOKEN}
